examples/programs/valid/group_consistent_word_bus.sst
.version 1
; Move 2 lanes on the same word_bus, same direction.
; LaneAddr: data0=[word:16][site:16], data1=[dir:1][mt:2][zone_id:8][pad:5][bus:16]
; mt=1 (word_bus): data1 = (1 << 29) = 0x20000000
; word_bus 0: src=[0] dst=[1]
; sites_with_word_buses: [5,6,7,8,9]

const_lane 0x2000000000000005   ; fwd, word_bus, zone 0, word 0, site 5, bus 0
const_lane 0x2000000000000006   ; fwd, word_bus, zone 0, word 0, site 6, bus 0
move 2
halt
