examples/programs/invalid/addr_invalid_word.sst
.version 1
; Invalid: word_id=5 does not exist (only words 0, 1, and 2)
; LocationAddr (64-bit): [zone_id:8][word_id:16][site_id:16][pad:24]
; zone 0, word 5, site 0 = (5 << 40) = 0x0000050000000000

const_loc 0x0000050000000000    ; zone 0, word 5, site 0
halt
